Account-api - Cria os endpoints para obter as informações da conta corrente e melhora as configurações para autenticação/autorização
