# src/Account-Api/Account.Api/Controllers/AccountController.cs
@@ -3,6 +3,7 @@ using Account.Api.Documentation.Swagger.Examples;
 using Account.Application.Account.Commands.CreateAccount;
 using Account.Application.Account.Commands.DeactivateAccount;
 using Account.Application.Account.Dto;
+using Account.Application.Account.Queries.GetAccountInformationByHolder;
 using MediatR;
 using Microsoft.AspNetCore.Authorization;
 using Microsoft.AspNetCore.Mvc;
@@ -11,6 +12,7 @@ using Swashbuckle.AspNetCore.Filters;
 using System;
 using System.Net;
 using System.Threading.Tasks;
+using Account.Application.Account.Queries.GetAccountInformation;
 
 namespace Account.Api.Controllers;
 
@@ -114,4 +116,108 @@ public class AccountController(ILoggerFactory loggerFactory, IMediator mediatorS
     [ProducesResponseType((int)HttpStatusCode.NoContent)]
     public async Task<IActionResult> DeactivateAccountAsync()
         => await ExecuteAsync(async () => await _mediatorService.Send(new DeactivateAccountCommand(UserId)), HttpStatusCode.NoContent);
+
+    /// <summary>
+    /// api/accounts/information.
+    /// </summary>
+    /// <remarks>
+    /// <p>
+    /// <b> Description: </b><br />
+    /// This method gets information from account. <br />
+    /// </p>
+    /// <p>
+    /// <b> Requirements: </b><br />
+    /// Is required to be authenticated. <br />
+    /// </p>
+    /// </remarks>
+    /// <response code="200">OK</response>
+    /// <response code="400">Bad Request
+    /// <ul>
+    ///     <li>Inactive.Account</li>
+    ///     <li>Invalid.AccountNumber</li>
+    ///     <li>User.IsRequired</li>
+    /// </ul>
+    /// </response>
+    /// <response code="401"> Unauthorized
+    /// </response>
+    /// <response code="403"> Forbidden
+    /// <ul>
+    ///     <li>Expired.Token</li>
+    ///     <li>Invalid.Token</li>
+    /// </ul>
+    /// </response>
+    /// <response code="404">Not Found
+    /// <ul>
+    ///     <li>NotFound.Account</li>
+    /// </ul>
+    /// </response>
+    /// <response code="409"> Conflict
+    /// </response>
+    /// <response code="500">InternalServerError
+    /// <ul>
+    ///     <li>Error.Unexpected</li>
+    /// </ul>
+    /// </response>
+    /// <response code="503"> ServiceUnavailable
+    /// <ul>
+    ///     <li>Idempotency.Unavailable</li>
+    /// </ul>
+    /// </response>
+    [HttpGet("information")]
+    [Authorize]
+    [SwaggerRequestExample(typeof(GetAccountInformationRequest), typeof(GetAccountInformationRequestExample))]
+    [ProducesResponseType(typeof(GetAccountInformationDto), (int)HttpStatusCode.OK)]
+    public async Task<IActionResult> GetAccountInformationAsync([FromQuery] GetAccountInformationRequest request)
+        => await ExecuteAsync(async () => await _mediatorService.Send(new GetAccountInformationQuery(request.AccountNumber)), HttpStatusCode.OK);
+
+    /// <summary>
+    /// api/accounts/information/holder.
+    /// </summary>
+    /// <remarks>
+    /// <p>
+    /// <b> Description: </b><br />
+    /// This method gets information from account by holder. <br />
+    /// </p>
+    /// <p>
+    /// <b> Requirements: </b><br />
+    /// Is required to be authenticated. <br />
+    /// </p>
+    /// </remarks>
+    /// <response code="200">OK</response>
+    /// <response code="400">Bad Request
+    /// <ul>
+    ///     <li>Inactive.Account</li>
+    ///     <li>User.IsRequired</li>
+    /// </ul>
+    /// </response>
+    /// <response code="401"> Unauthorized
+    /// </response>
+    /// <response code="403"> Forbidden
+    /// <ul>
+    ///     <li>Expired.Token</li>
+    ///     <li>Invalid.Token</li>
+    /// </ul>
+    /// </response>
+    /// <response code="404">Not Found
+    /// <ul>
+    ///     <li>NotFound.Account</li>
+    /// </ul>
+    /// </response>
+    /// <response code="409"> Conflict
+    /// </response>
+    /// <response code="500">InternalServerError
+    /// <ul>
+    ///     <li>Error.Unexpected</li>
+    /// </ul>
+    /// </response>
+    /// <response code="503"> ServiceUnavailable
+    /// <ul>
+    ///     <li>Idempotency.Unavailable</li>
+    /// </ul>
+    /// </response>
+    [HttpGet("information/holder")]
+    [Authorize]
+    [ProducesResponseType(typeof(GetAccountInformationDto), (int)HttpStatusCode.OK)]
+    public async Task<IActionResult> GetAccountInformationByHolderAsync()
+        => await ExecuteAsync(async () => await _mediatorService.Send(new GetAccountInformationByHolderQuery(UserId)), HttpStatusCode.OK);
 }
