# src/Account-Api/Account.Api/Controllers/Requests/GetAccountInformationRequest.cs
@@ -1,0 +1,3 @@
+﻿namespace Account.Api.Controllers.Requests;
+
+public record GetAccountInformationRequest(int AccountNumber);
