# src/Account-Api/Account.Application/Account/Dto/GetAccountInformationDto.cs
@@ -1,0 +1,5 @@
+﻿using System;
+
+namespace Account.Application.Account.Dto;
+
+public record GetAccountInformationDto(Guid AccountId, int AccountNumber);
